Dont cache all mipmaps